# backend/src/generated/java/src/main/java/ch/uzh/ifi/imrg/generated/model/UpdateChatbotDTOPatientAPI.java
@@ -1,0 +1,232 @@
+/*
+ * 
+ * 
+ *
+ * 
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package ch.uzh.ifi.imrg.generated.model;
+
+import java.util.Objects;
+import java.util.Arrays;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+
+/**
+ * UpdateChatbotDTOPatientAPI
+ */
+@JsonPropertyOrder({
+  UpdateChatbotDTOPatientAPI.JSON_PROPERTY_ID,
+  UpdateChatbotDTOPatientAPI.JSON_PROPERTY_CHATBOT_ROLE,
+  UpdateChatbotDTOPatientAPI.JSON_PROPERTY_CHATBOT_TONE,
+  UpdateChatbotDTOPatientAPI.JSON_PROPERTY_WELCOME_MESSAGE,
+  UpdateChatbotDTOPatientAPI.JSON_PROPERTY_ACTIVE
+})
+@JsonTypeName("UpdateChatbotDTO")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", comments = "Generator version: 7.4.0")
+public class UpdateChatbotDTOPatientAPI {
+  public static final String JSON_PROPERTY_ID = "id";
+  private String id;
+
+  public static final String JSON_PROPERTY_CHATBOT_ROLE = "chatbotRole";
+  private String chatbotRole;
+
+  public static final String JSON_PROPERTY_CHATBOT_TONE = "chatbotTone";
+  private String chatbotTone;
+
+  public static final String JSON_PROPERTY_WELCOME_MESSAGE = "welcomeMessage";
+  private String welcomeMessage;
+
+  public static final String JSON_PROPERTY_ACTIVE = "active";
+  private Boolean active;
+
+  public UpdateChatbotDTOPatientAPI() {
+  }
+
+  public UpdateChatbotDTOPatientAPI id(String id) {
+    
+    this.id = id;
+    return this;
+  }
+
+   /**
+   * Get id
+   * @return id
+  **/
+  @javax.annotation.Nullable
+  @JsonProperty(JSON_PROPERTY_ID)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+
+  public String getId() {
+    return id;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_ID)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+  public void setId(String id) {
+    this.id = id;
+  }
+
+
+  public UpdateChatbotDTOPatientAPI chatbotRole(String chatbotRole) {
+    
+    this.chatbotRole = chatbotRole;
+    return this;
+  }
+
+   /**
+   * Get chatbotRole
+   * @return chatbotRole
+  **/
+  @javax.annotation.Nullable
+  @JsonProperty(JSON_PROPERTY_CHATBOT_ROLE)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+
+  public String getChatbotRole() {
+    return chatbotRole;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_CHATBOT_ROLE)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+  public void setChatbotRole(String chatbotRole) {
+    this.chatbotRole = chatbotRole;
+  }
+
+
+  public UpdateChatbotDTOPatientAPI chatbotTone(String chatbotTone) {
+    
+    this.chatbotTone = chatbotTone;
+    return this;
+  }
+
+   /**
+   * Get chatbotTone
+   * @return chatbotTone
+  **/
+  @javax.annotation.Nullable
+  @JsonProperty(JSON_PROPERTY_CHATBOT_TONE)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+
+  public String getChatbotTone() {
+    return chatbotTone;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_CHATBOT_TONE)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+  public void setChatbotTone(String chatbotTone) {
+    this.chatbotTone = chatbotTone;
+  }
+
+
+  public UpdateChatbotDTOPatientAPI welcomeMessage(String welcomeMessage) {
+    
+    this.welcomeMessage = welcomeMessage;
+    return this;
+  }
+
+   /**
+   * Get welcomeMessage
+   * @return welcomeMessage
+  **/
+  @javax.annotation.Nullable
+  @JsonProperty(JSON_PROPERTY_WELCOME_MESSAGE)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+
+  public String getWelcomeMessage() {
+    return welcomeMessage;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_WELCOME_MESSAGE)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+  public void setWelcomeMessage(String welcomeMessage) {
+    this.welcomeMessage = welcomeMessage;
+  }
+
+
+  public UpdateChatbotDTOPatientAPI active(Boolean active) {
+    
+    this.active = active;
+    return this;
+  }
+
+   /**
+   * Get active
+   * @return active
+  **/
+  @javax.annotation.Nullable
+  @JsonProperty(JSON_PROPERTY_ACTIVE)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+
+  public Boolean getActive() {
+    return active;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_ACTIVE)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+  public void setActive(Boolean active) {
+    this.active = active;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    UpdateChatbotDTOPatientAPI updateChatbotDTO = (UpdateChatbotDTOPatientAPI) o;
+    return Objects.equals(this.id, updateChatbotDTO.id) &&
+        Objects.equals(this.chatbotRole, updateChatbotDTO.chatbotRole) &&
+        Objects.equals(this.chatbotTone, updateChatbotDTO.chatbotTone) &&
+        Objects.equals(this.welcomeMessage, updateChatbotDTO.welcomeMessage) &&
+        Objects.equals(this.active, updateChatbotDTO.active);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(id, chatbotRole, chatbotTone, welcomeMessage, active);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class UpdateChatbotDTOPatientAPI {\n");
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("    chatbotRole: ").append(toIndentedString(chatbotRole)).append("\n");
+    sb.append("    chatbotTone: ").append(toIndentedString(chatbotTone)).append("\n");
+    sb.append("    welcomeMessage: ").append(toIndentedString(welcomeMessage)).append("\n");
+    sb.append("    active: ").append(toIndentedString(active)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
